// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poll Block should render AlreadyVoted 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousAlreadyVoted 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVoting 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,37 +31,77 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-1e4oizq-PollBlockVoting ecm33wf2"
+       class="css-h8emd-PollBlockVoteResultList ecm33wf1"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
+         >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             55%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-6pz6b3-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
+           >
+             12 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
          >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             45%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-1cibdzq-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
+           <div
+             class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
+           >
+             10 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-nh52ap-PollBlockMeta ecm33wf0"
      >
-       21 Stimmen – Schliesst am 
+       22 Stimmen – Schliesst am 
        <time
          datetime="2033-01-01"
        >
          01.01.2033 00:00
        </time>"
`;

exports[`Poll Block should render Default 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render Voting 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingClosed 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Abstimmung beendet.
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,37 +31,77 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-1e4oizq-PollBlockVoting ecm33wf2"
+       class="css-h8emd-PollBlockVoteResultList ecm33wf1"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
+         >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             55%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-6pz6b3-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
+           >
+             12 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
          >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             45%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-1cibdzq-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
+           <div
+             class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
+           >
+             10 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-nh52ap-PollBlockMeta ecm33wf0"
      >
-       21 Stimmen – Schliesst am 
+       22 Stimmen – Schliesst am 
        <time
          datetime="2033-01-01"
        >
          01.01.2033 00:00
        </time>"
`;

exports[`Poll Block should render WihtoutPoll 1`] = `<DocumentFragment />`;

exports[`Poll Block should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithError 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,10 +31,60 @@
            </span>
          </p>
        </div>
      </div>
      <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard css-1iznk5b-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the user vote.
+       </div>
+     </div>
+     <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard css-1iznk5b-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the poll vote.
+       </div>
+     </div>
+     <div
        class="css-1e4oizq-PollBlockVoting ecm33wf2"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
          tabindex="0""
`;
